# speculare-pgcdc

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Example.toml  LICENSE  Pgcdc.example.toml  README.md  pgcdc.example.config  release-please-config.json
.github/workflows/: ci.yml  clippy.yml  upload-to-release.yaml
pg-docker/: Dockerfile  pg.conf.sample
scripts/: installDocker.sh  startPgDocker.sh  test.sh
src/: api.rs  cdc.rs  handlers.rs  inner.rs  logger.rs  main.rs  pg_cdc.rs  server.rs  ws_client.rs  ws_server.rs  ws_utils.rs
src/api/: auth.rs  mod.rs  query.rs  server.rs  ws_handler.rs  ws_utils.rs
src/cdc/: cdc_broadcaster.rs  connection.rs  mod.rs  replication.rs  replication_utils.rs
src/forwarder/: mod.rs
src/utils/: auth.rs  config.rs  mod.rs  query.rs  specific_filter.rs  ws_utils.rs
src/websockets/: cdc_transmitter.rs  client.rs  forwarder.rs  handlers.rs  mod.rs  ws_dispatcher.rs  ws_index.rs  ws_server.rs  ws_session.rs  ws_specific_filter.rs
src/websockets/client/: mod.rs  ws_client.rs
src/websockets/server/: handler_connect.rs  handler_disconnect.rs  handler_message.rs  mod.rs  ws_server.rs
