[package]
name = "speculare-pgcdc"
version = "0.0.5"
authors = ["Martichou <martichou.andre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sproot = { git = "https://github.com/speculare-cloud/sproot" }
async-trait = "0.1"
axum = { version = "0.5", features = ["ws", "http1", "http2"] }
bastion = "0.4"
bastion-executor = { version = "0.4", features = ["tokio-runtime"] }
bytes = "1"
byteorder = "1.4"
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0"
config = { version = "0.13", features = ["toml"] }
diesel = { version = "2.0.0-rc.0", features = ["postgres", "r2d2", "chrono"], optional = true }
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
moka = { version = "0.9", features = ["future"], optional = true }
openssl = "0.10"
postgres-openssl = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "c46e0af" }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.6"
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "c46e0af" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tower-http = { version = "0.3", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid-readable-rs = "0.1"
uuid = { version = "1.1", features = ["v4"], optional = true }

[features]
default = ["timescale"]
auth = ["moka", "uuid", "diesel"]
timescale = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1