[package]
name = "speculare-pgcdc"
version = "0.0.5"
authors = ["Martichou <martichou.andre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sproot = { git = "https://github.com/speculare-cloud/sproot" }
async-trait = "0.1"
axum = { version = "0.6", features = ["ws", "http1", "http2"] }
axum-extra = { version = "0.7", features = ["cookie-signed"], optional = true}
axum-server = { version = "0.5", features = ["tls-rustls"] }
bastion = "0.4"
bastion-executor = { version = "0.4", features = ["tokio-runtime"] }
bytes = "1.2"
byteorder = "1.4"
clap = { version = "4.2", features = ["derive"] }
clap-verbosity-flag = "2.0"
config = { version = "0.13", features = ["toml"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"], optional = true }
futures = "0.3"
log = "0.4"
moka = { version = "0.11", features = ["future"], optional = true }
once_cell = "1.14"
openssl = "0.10"
postgres-openssl = { git = "https://github.com/Martichou/rust-postgres", branch = "dev" }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.9"
tokio-postgres = { git = "https://github.com/Martichou/rust-postgres", branch = "dev" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tower-http = { version = "0.4", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid-readable-rs = "0.1"
uuid = { version = "1.1", features = ["v4"], optional = true }

[features]
default = ["timescale"]
auth = ["moka", "uuid", "diesel", "axum-extra"]
timescale = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1